--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,12 @@
   <title>AngularModule</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.css">
 </head>
 <body>
-  <app-root></app-root>
+<app-root></app-root>
+
+<script src="/assets/jquery/jquery-3.5.1.min.js"></script>
+<script src="/assets/bootstrap/js/bootstrap.js"></script>
 </body>
 </html>
